--- a/src/App.css
+++ b/src/App.css
@@ -13,19 +13,18 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header {
+  height: 10%;
+  padding: 20px 10%;
+  border: 1px solid #ccd5ae;
+  background: #6EAEA1;
+  /*background: linear-gradient(to bottom, #e9edc9, #faedcd);*/
+  box-shadow: 0 0 5px #ccd5ae;
+  margin: auto;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #C95A49;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +34,101 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.App-nav-item {
+  display: inline;
+  color: #002147;
+}
+
+body, html, ul, main {
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  overflow: auto;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: Montserrat;
+}
+
+li {
+  margin-right: 10px;
+}
+
+.container {
+  height: 100vh;
+}
+
+main {
+  height: 90%;
+  padding: 1px;
+}
+
+footer {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #6EAEA1;
+}
+
+.App-nav-list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+
+.selected {
+    background: #C95A49;
+    color: white;
+    padding-inline: 20px;
+    padding-block: 15px;
+}
+
+input[type="radio"] {
+  display: inline;
+}
+
+a:hover {
+  color: #6b8d62;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: #002147;
+}
+
+button{
+  background:none;
+  border:none;
+  margin:0;
+  padding:0;
+  color: #002147;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover{
+  background: #C95A49;
+  color: white;
+  padding-inline: 0px;
+  padding-block: 0px;
+}
+
+.app-log{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
