--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@ a:visited {
   color: #002147;
 }
 
-button{
+.logout-btn{
   background:none;
   border:none;
   margin:0;
@@ -119,7 +119,7 @@ button{
   cursor: pointer;
 }
 
-button:hover{
+.logout-btn:hover{
   background: #C95A49;
   color: white;
   padding-inline: 0px;
