--- a/src/AlgList.css
+++ b/src/AlgList.css
@@ -115,7 +115,7 @@ input[type="submit"] {
 
 .back{
     background: #B0E0E6;
-    margin: -8px -1px;
+    margin: 50px -1px;
     /*background: linear-gradient(to top, #B0E0E6 , #ffffff);*/
 }
 
@@ -135,4 +135,38 @@ input[type="submit"] {
     background-color: #6b8d62; /* color of the scroll thumb */
     border-radius: 20px; /* roundness of the scroll thumb */
     border: 3px solid #002147; /* creates padding around scroll thumb */
+}
+
+.search-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    width: 350px;
+    height: 40px;
+    border-radius: 40px;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+    transform: translate(-50%, -50%);
+    background: #fff;
+    transition: all 0.3s ease;
+}
+.search-form:focus {
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.15);
+}
+
+.search{
+    position: absolute;
+    top: 10px;
+    left: 38px;
+    font-size: 14px;
+    background: none;
+    color: #5a6674;
+    width: 195px;
+    height: 20px;
+    border: none;
+    appearance: none;
+    outline: none;
 }
